[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/okx/xlayer-reth.git"
repository = "https://github.com/okx/xlayer-reth.git"

# ==============================================================================
# Workspace Configuration
# ==============================================================================

[workspace]
resolver = "2"
members = [
    "crates/builder",
    "crates/chainspec",
    "crates/flashblocks",
    "crates/legacy-rpc",
    "crates/monitor",
    "crates/rpc",
    "crates/tests",
    "crates/version",

    "bin/tools",
    "bin/node",
]
default-members = ["bin/node"]

[workspace.lints]

# ==============================================================================
# Build Profiles
# ==============================================================================

# Mimics reth release profile
[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

# ==============================================================================
# Workspace Dependencies
# ==============================================================================

[workspace.dependencies]

# ==============================================================================
# Internal Dependencies
# ==============================================================================

xlayer-builder = { path = "crates/builder" }
xlayer-chainspec = { path = "crates/chainspec" }
xlayer-flashblocks = { path = "crates/flashblocks" }
xlayer-legacy-rpc = { path = "crates/legacy-rpc" }
xlayer-monitor = { path = "crates/monitor" }
xlayer-reth-node = { path = "bin/node" }
xlayer-rpc = { path = "crates/rpc" }
xlayer-version = { path = "crates/version" }

# For X Layer
xlayer-trace-monitor = { git = "https://github.com/okx/xlayer-toolkit", rev = "d6af8edac7cf179241af1688f7741e260ba48b79" }

# ==============================================================================
# Reth Dependencies (points to our fork)
# ==============================================================================
reth = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-basic-payload-builder = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-chainspec = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-cli = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-cli-commands = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-cli-util = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-db = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-engine-primitives = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-ethereum-forks = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-evm = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-execution-types = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-ipc = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-metrics = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-node-api = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-node-builder = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-node-core = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-optimism-chainspec = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-optimism-cli = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-optimism-consensus = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-optimism-evm = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-optimism-forks = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-optimism-node = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-optimism-payload-builder = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-optimism-primitives = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-optimism-rpc = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-optimism-txpool = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-payload-builder = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-payload-builder-primitives = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-payload-primitives = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-payload-util = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-primitives = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-primitives-traits = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-provider = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-revm = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-rpc = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-rpc-api = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-rpc-convert = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-rpc-engine-api = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-rpc-eth-api = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-rpc-eth-types = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-rpc-layer = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-rpc-server-types = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-storage-api = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-tasks = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-testing-utils = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-tokio-util = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-tracing = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-transaction-pool = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-optimism-flashblocks = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }
reth-trie = { git = "https://github.com/okx/reth", rev = "b6a31f31af91abdecb475f2a991906bff9bbef7f" }

# ==============================================================================
# Revm Dependencies (follows upstream reth)
# ==============================================================================
revm = { version = "34.0.0", features = [
    "std",
    "secp256k1",
    "optional_balance_check",
], default-features = false }
op-revm = { version = "15.0.0", default-features = false }

# ==============================================================================
# Alloy Dependencies
# ==============================================================================
alloy-chains = { version = "0.2.20", default-features = false }
alloy-contract = { version = "1.4.3" }
alloy-consensus = { version = "1.4.3" }
alloy-eips = { version = "1.4.3", default-features = false }
alloy-evm = { version = "0.26.3", default-features = false }
alloy-genesis = { version = "1.4.3", default-features = false }
alloy-json-rpc = { version = "1.4.3" }
alloy-network = { version = "1.4.3", default-features = false }
alloy-primitives = { version = "1.5.2", default-features = false, features = [
    "map-foldhash",
] }
alloy-provider = { version = "1.4.3" }
alloy-rlp = { version = "0.3.10", default-features = false, features = [
    "core-net",
] }
alloy-rpc-types-engine = { version = "1.4.3", default-features = false }
alloy-rpc-types-eth = { version = "1.4.3" }
alloy-signer-local = { version = "1.4.3", default-features = false }
alloy-sol-types = { version = "1.5.0", default-features = false }

# op-alloy
alloy-op-evm = { version = "0.26.3", default-features = false }
op-alloy-consensus = { version = "0.23.1", default-features = false }
op-alloy-flz = { version = "0.13.1", default-features = false }
op-alloy-network = { version = "0.23.1", default-features = false }
op-alloy-rpc-types = { version = "0.23.1", default-features = false }
op-alloy-rpc-types-engine = { version = "0.23.1", default-features = false }

# ==============================================================================
# Support Dependencies
# ==============================================================================
tokio = { version = "1.44.2", features = ["full"] }
tokio-metrics = { version = "0.4.7" }
tokio-stream = "0.1.11"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tokio-util = { version = "0.7.4", features = ["codec"] }

# async
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = "0.5"
async-trait = "0.1.89"

# rpc
jsonrpsee = "0.26.0"
jsonrpsee-types = "0.26.0"
jsonrpsee-core = { version = "0.26.0" }

# misc
clap = { version = "4.4.3" }
derive_more = { version = "2", default-features = false, features = ["full"] }
dashmap = "6.1"
either = { version = "1.15.0", default-features = false }
eyre = { version = "0.6.12" }
hex = "0.4"
metrics = "0.24.1"
moka = { version = "0.12.11", features = ["sync"] }
once_cell = "1.19"
parking_lot = { version = "0.12.3" }
secp256k1 = { version = "0.30" }
serde = "1"
serde_json = "1.0"
thiserror = { version = "1.0.64" }
humantime = "2.1"
tracing = { version = "0.1.41" }
shellexpand = "3.1"
url = "2.5"

# p2p
libp2p = { version = "0.56", features = ["identify", "ping", "noise", "tcp", "autonat", "mdns", "tokio", "cbor", "macros", "yamux", "dns"] }
libp2p-stream = "0.4.0-alpha"
multiaddr = "0.18"
