[package]
name = "xlayer-builder-p2p"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# p2p
libp2p = { workspace = true }
libp2p-stream = { workspace = true }
multiaddr = { workspace = true }

# async
futures = { workspace = true}
futures-util = { workspace = true }

# tokio
tokio = { workspace = true, features = [ "macros" ] }
tokio-util = { workspace = true, features = [ "compat", "codec" ]  }

# misc
derive_more = { workspace = true, features = ["from"] }
eyre = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
