[package]
name = "xlayer-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
xlayer-builder-p2p = { path = "../builder-p2p" }
xlayer-trace-monitor.workspace = true

# reth
reth.workspace = true
reth-optimism-node.workspace = true
reth-optimism-cli.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-payload-builder.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-consensus.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-txpool.workspace = true
reth-cli.workspace = true
reth-db.workspace = true
reth-payload-primitives.workspace = true
reth-evm.workspace = true
reth-exex.workspace = true
reth-chainspec.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-node-api.workspace = true
reth-rpc-engine-api.workspace = true
reth-node-core.workspace = true
reth-basic-payload-builder.workspace = true
reth-payload-builder.workspace = true
reth-chain-state.workspace = true
reth-execution-types.workspace = true
reth-metrics.workspace = true
reth-provider.workspace = true
reth-revm.workspace = true
reth-trie.workspace = true
reth-rpc-layer.workspace = true
reth-payload-builder-primitives.workspace = true
reth-payload-util.workspace = true
reth-transaction-pool.workspace = true
reth-network-peers.workspace = true
reth-testing-utils.workspace = true
reth-optimism-forks.workspace = true
reth-node-builder = { workspace = true, features = ["test-utils"] }
reth-storage-api.workspace = true
reth-rpc-api.workspace = true
reth-rpc-eth-types.workspace = true
reth-optimism-rpc.workspace = true
reth-tasks.workspace = true
reth-ipc = { workspace = true, optional = true }
reth-tracing-otlp = { workspace = true, optional = true }

# alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-rpc-types-beacon.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-transport-http.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-client.workspace = true
alloy-transport.workspace = true
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-serde.workspace = true
alloy-json-rpc.workspace = true
alloy-signer-local.workspace = true
alloy-sol-types = { workspace = true, features = ["json"] }

# op
alloy-op-evm.workspace = true
op-alloy-consensus.workspace = true
op-alloy-rpc-types-engine.workspace = true
op-alloy-rpc-types.workspace = true
op-alloy-network.workspace = true
op-alloy-flz.workspace = true

# revm
revm.workspace = true
op-revm.workspace = true

# async
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
reqwest.workspace = true
tower.workspace = true

# tokio
tokio.workspace = true
tokio-util.workspace = true
tokio-metrics.workspace = true
tokio-tungstenite.workspace = true

# rpc
jsonrpsee = { workspace = true }
jsonrpsee-core = { workspace = true }
jsonrpsee-types = { workspace = true }

# misc
anyhow = "1"
clap.workspace = true
dashmap.workspace = true
derive_more.workspace = true
either.workspace = true
eyre.workspace = true
hex = { workspace = true }
tracing.workspace = true
metrics.workspace = true
moka = { workspace = true, features = ["future"] }
opentelemetry = { workspace = true, optional = true }
parking_lot.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
shellexpand.workspace = true
thiserror.workspace = true
url.workspace = true

chrono = "0.4"
ctor = { version = "0.4.2", optional = true }
http = "1.0"
http-body-util = { version = "0.1.3", optional = true }
hyper = { version = "1.7.0", features = ["http1"], optional = true }
hyper-util = { version = "0.1.11", optional = true }
k256 = "0.13.4"
macros = { path = "src/tests/framework/macros", optional = true }
nanoid = { version = "0.4", optional = true }
rand = "0.9.0"
rlimit = { version = "0.10", optional = true }
serde_yaml = { version = "0.9" }
sha3 = "0.10"
time = { version = "0.3.36", features = ["macros", "formatting", "parsing"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
testcontainers = "0.24.0"

[dev-dependencies]
alloy-provider = { workspace = true, default-features = true, features = [
    "txpool-api",
] }
ctor = "0.4.2"
hyper = { version = "1.7.0", features = ["http1"] }
hyper-util = { version = "0.1.11" }
http-body-util = { version = "0.1.3" }
macros = { path = "src/tests/framework/macros" }
nanoid = { version = "0.4" }
reth-ipc.workspace = true
reth-optimism-rpc = { workspace = true, features = ["client"] }
rlimit = { version = "0.10" }

[features]
default = []

testing = [
    "nanoid",
    "reth-ipc",
    "reth-node-builder/test-utils",
    "ctor",
    "macros",
    "rlimit",
    "hyper",
    "hyper-util",
    "http-body-util",
]

interop = []

telemetry = ["reth-tracing-otlp", "opentelemetry"]
