[package]
name = "xlayer-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
xlayer-trace-monitor.workspace = true

# reth
reth.workspace = true
reth-optimism-node.workspace = true
reth-optimism-cli.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-payload-builder.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-consensus.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-txpool.workspace = true
reth-db.workspace = true
reth-payload-primitives.workspace = true
reth-evm.workspace = true
reth-chainspec.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-node-api.workspace = true
reth-rpc-engine-api.workspace = true
reth-node-core.workspace = true
reth-basic-payload-builder.workspace = true
reth-payload-builder.workspace = true
reth-execution-types.workspace = true
reth-metrics.workspace = true
reth-provider.workspace = true
reth-revm.workspace = true
reth-trie.workspace = true
reth-rpc-layer.workspace = true
reth-payload-util.workspace = true
reth-transaction-pool.workspace = true
reth-testing-utils.workspace = true
reth-optimism-forks.workspace = true
reth-node-builder = { workspace = true, features = ["test-utils"] }
reth-storage-api.workspace = true
reth-rpc-api.workspace = true
reth-optimism-rpc.workspace = true
reth-ipc = { workspace = true, optional = true }

# alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-sol-types = { workspace = true, features = ["json"] }

# op
alloy-op-evm.workspace = true
op-alloy-consensus.workspace = true
op-alloy-rpc-types-engine.workspace = true
op-alloy-rpc-types.workspace = true
op-alloy-network.workspace = true
op-alloy-flz.workspace = true

# revm
revm.workspace = true
op-revm.workspace = true

# async
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tower.workspace = true

# tokio
tokio.workspace = true
tokio-util = { workspace = true, features = ["compat"] }
tokio-metrics.workspace = true
tokio-tungstenite.workspace = true

# rpc
jsonrpsee = { workspace = true }
jsonrpsee-core = { workspace = true }

# p2p
libp2p = { workspace = true }
libp2p-stream = { workspace = true }
multiaddr = { workspace = true }

# misc
anyhow = "1"
clap.workspace = true
dashmap.workspace = true
derive_more.workspace = true
either.workspace = true
eyre.workspace = true
hex = { workspace = true }
tracing.workspace = true
metrics.workspace = true
moka = { workspace = true, features = ["future"] }
parking_lot.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
shellexpand.workspace = true
thiserror.workspace = true
url.workspace = true

chrono = "0.4"
ctor = { version = "0.4.2", optional = true }
http-body-util = { version = "0.1.3", optional = true }
hyper = { version = "1.7.0", features = ["http1"], optional = true }
hyper-util = { version = "0.1.11", optional = true }
macros = { path = "src/tests/framework/macros", optional = true }
nanoid = { version = "0.4", optional = true }
rand = "0.9.0"
rlimit = { version = "0.10", optional = true }
sha3 = "0.10"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
testcontainers = "0.24.0"

[dev-dependencies]
alloy-provider = { workspace = true, default-features = true, features = [
    "txpool-api",
] }
ctor = "0.4.2"
hyper = { version = "1.7.0", features = ["http1"] }
hyper-util = { version = "0.1.11" }
http-body-util = { version = "0.1.3" }
macros = { path = "src/tests/framework/macros" }
nanoid = { version = "0.4" }
reth-ipc.workspace = true
reth-optimism-rpc = { workspace = true, features = ["client"] }
rlimit = { version = "0.10" }

[features]
default = []

testing = [
    "nanoid",
    "reth-ipc",
    "reth-node-builder/test-utils",
    "ctor",
    "macros",
    "rlimit",
    "hyper",
    "hyper-util",
    "http-body-util",
]

interop = []
