[package]
name = "xlayer-chainspec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "XLayer chain specifications for xlayer-reth"

[lints]
workspace = true

[dependencies]
# reth
reth-chainspec = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-cli = { workspace = true }

# op-reth
reth-optimism-primitives = { workspace = true }
reth-optimism-chainspec = { workspace = true }
reth-optimism-cli = { workspace = true }
reth-optimism-forks = { workspace = true }
reth-ethereum-forks = { workspace = true }

# ethereum
alloy-genesis = { workspace = true }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-chains = { workspace = true }

# op
op-alloy-rpc-types = { workspace = true }

# misc
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
