[package]
name = "xlayer-full-trace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
# Reth dependencies
reth-chain-state.workspace = true
reth-chainspec.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-node-core.workspace = true
reth-optimism-node.workspace = true
reth-optimism-rpc.workspace = true
reth-payload-builder.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-rpc-api.workspace = true
reth-rpc-engine-api.workspace = true
reth-storage-api.workspace = true
reth-transaction-pool.workspace = true

# Alloy dependencies
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-eips.workspace = true

# OP Stack dependencies
op-alloy-rpc-types-engine.workspace = true

# JSON-RPC dependencies
jsonrpsee.workspace = true

# Async dependencies
async-trait.workspace = true
futures.workspace = true
futures-util.workspace = true

# Logging
tracing.workspace = true

# Error handling
eyre.workspace = true

# Tower middleware
tower.workspace = true

# Serialization
serde_json.workspace = true

[lints]
workspace = true
