[package]
name = "xlayer-reth-import"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "XLayer Reth Import Command"

[lints]
workspace = true

[[bin]]
name = "xlayer-reth-import"
path = "src/main.rs"

[dependencies]
# internal
xlayer-chainspec.workspace = true

# reth
reth.workspace = true
reth-optimism-node.workspace = true
reth-optimism-cli.workspace = true
reth-primitives.workspace = true
reth-rpc-eth-api.workspace = true
reth-optimism-primitives.workspace = true
reth-rpc-convert.workspace = true
reth-optimism-rpc.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-cli-util.workspace = true
reth-exex.workspace = true
reth-chainspec.workspace = true
reth-cli.workspace = true
reth-cli-commands.workspace = true
reth-node-core.workspace = true
reth-optimism-consensus.workspace = true
reth-tracing.workspace = true

# tokio
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true

# async
futures.workspace = true
futures-util.workspace = true
reqwest.workspace = true

# rpc
jsonrpsee.workspace = true

# alloy
alloy-primitives.workspace = true

# misc
clap.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
itertools.workspace = true
eyre.workspace = true
uuid.workspace = true
time.workspace = true
chrono.workspace = true
once_cell.workspace = true

[features]
default = []
jemalloc = ["reth-cli-util/jemalloc", "reth-optimism-cli/jemalloc"]
asm-keccak = ["alloy-primitives/asm-keccak"]

