[package]
name = "xlayer-legacy-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
reqwest.workspace = true
tower.workspace = true
tracing.workspace = true
serde_json = { workspace = true, features = ["std"] }
jsonrpsee-types.workspace = true
jsonrpsee = { workspace = true, features = ["server", "client"] }
tokio.workspace = true
futures.workspace = true

[lints]
workspace = true
