[package]
name = "xlayer-monitor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
# Reth dependencies
reth-chain-state.workspace = true
reth-engine-primitives.workspace = true
reth-node-api.workspace = true
reth-payload-builder.workspace = true
reth-payload-builder-primitives.workspace = true
reth-payload-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-storage-api.workspace = true
reth-tasks.workspace = true
reth-tokio-util.workspace = true

# Alloy dependencies
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true

# OP Stack dependencies
op-alloy-rpc-types-engine.workspace = true

# Misc dependencies
clap.workspace = true
eyre.workspace = true
futures.workspace = true
jsonrpsee = { workspace = true, features = ["server", "client-core"] }
jsonrpsee-types.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tower.workspace = true

[lints]
workspace = true
