[package]
name = "xlayer-monitor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
# Reth dependencies
reth-engine-primitives.workspace = true
reth-payload-builder.workspace = true
reth-payload-builder-primitives.workspace = true
reth-payload-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-tasks.workspace = true
reth-tokio-util.workspace = true

xlayer-trace-monitor.workspace = true

# Alloy dependencies
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true

# Misc dependencies
clap.workspace = true
futures.workspace = true
jsonrpsee = { workspace = true, features = ["server", "client-core"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tower.workspace = true

[lints]
workspace = true
