[package]
name = "xlayer-reth-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "XLayer Reth Binary"

[lints]
workspace = true

[dependencies]

# reth
reth.workspace = true
reth-optimism-node.workspace = true
reth-optimism-cli.workspace = true
reth-primitives.workspace = true
reth-rpc-eth-api.workspace = true
reth-optimism-primitives.workspace = true
reth-rpc-convert.workspace = true
reth-optimism-rpc.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-cli-util.workspace = true
reth-exex.workspace = true
reth-provider.workspace = true
reth-db-common.workspace = true
reth-node-builder.workspace = true
reth-node-core.workspace = true
reth-node-types.workspace = true
reth-node-api.workspace = true
reth-chainspec.workspace = true
reth-codecs.workspace = true
reth-stages-types.workspace = true
reth-static-file-types.workspace = true
reth-tasks.workspace = true
reth-tracing.workspace = true
reth-engine-service.workspace = true
reth-engine-tree.workspace = true
reth-engine-util.workspace = true
reth-network.workspace = true
reth-network-api.workspace = true
reth-node-events.workspace = true
reth-tokio-util.workspace = true
reth-trie.workspace = true
reth-trie-db.workspace = true
reth-db-api.workspace = true
reth-network-peers.workspace = true
alloy-eips.workspace = true

# tokio
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true

# async
futures.workspace = true
futures-util.workspace = true
reqwest.workspace = true

# rpc
jsonrpsee.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-genesis.workspace = true

# misc
clap.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
itertools.workspace = true
eyre.workspace = true
uuid.workspace = true
time.workspace = true
chrono.workspace = true
once_cell.workspace = true

# code generation utilities
delegate = "0.13"

[features]
default = []
jemalloc = ["reth-cli-util/jemalloc", "reth-optimism-cli/jemalloc"]
asm-keccak = ["alloy-primitives/asm-keccak"]
