[package]
name = "xlayer-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
reth-chainspec.workspace = true
reth-errors.workspace = true
reth-evm.workspace = true
reth-optimism-rpc.workspace = true
reth-revm.workspace = true
reth-rpc.workspace = true
reth-rpc-eth-api.workspace = true
reth-storage-api.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-trace.workspace = true
op-alloy-rpc-types.workspace = true

jsonrpsee.workspace = true
revm.workspace = true
revm-inspectors.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true

