[package]
name = "xlayer-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
reth-chainspec.workspace = true
reth-optimism-rpc.workspace = true
reth-rpc.workspace = true
reth-rpc-eth-api.workspace = true
reth-storage-api.workspace = true

alloy-consensus.workspace = true
alloy-primitives.workspace = true

jsonrpsee.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true

