[package]
name = "xlayer-version"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
reth-node-core.workspace = true

[build-dependencies]
vergen = { version = "9.1.0", features = ["cargo", "emit_and_set"] }
vergen-git2 = "9.1.0"

[lints]
workspace = true
